<resources>
    <string name="app_name">WeatherManager</string>
    <string name="weather">Weather</string>
    <string name="title_activity_main">WeatherManager</string>

    <string name="title_home">Home</string>
    <string name="title_forecast">Forecast</string>
    <string name="title_notification">Notification</string>

    <string name="pressure">Pressure</string>
    <string name="humidity">humidity</string>
    <string name="windspeed">Wind speed</string>
    <string name="winddeg">Wind deg.</string>
    <string name="clouding">Clouding</string>

    <string name="set">Notification set:</string>
    <string name="clock">00:00</string>
    <string name="date">Date</string>
    <string name="repeat">Repeat</string>
    <string name="settime">Set time</string>
    <string name="cancel">Cancel</string>

    <string name="city">City</string>
    <string name="update_time">Update time: </string>

    <string name="settings">Settings</string>
    <string name="about">About</string>
</resources>
