<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tcity"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/city"
        android:textAlignment="center"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/icon_weather"
            android:contentDescription="@string/weather"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/cloudy_sun"
            android:layout_marginStart="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp">
            <TextView
                android:id="@+id/cardtemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:textSize="70sp" />

            <TextView
                android:id="@+id/carddescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardtemp"
                android:layout_alignEnd="@+id/cardtemp"
                android:layout_marginTop="8dp"
                android:textSize="20sp" />

        </RelativeLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:text="@string/pressure"
        android:layout_marginBottom="0dp"
        android:textSize="20sp" />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:text="@string/humidity"
        android:layout_marginBottom="0dp"
        android:textSize="20sp" />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/windspeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:text="@string/windspeed"
        android:layout_marginBottom="0dp"
        android:textSize="20sp" />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/winddeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:text="@string/winddeg"
        android:layout_marginBottom="0dp"
        android:textSize="20sp" />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/clouding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:text="@string/clouding"
        android:layout_marginBottom="0dp"
        android:textSize="20sp" />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textView"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="0dp"
        android:text="@string/update_time"
        android:textAlignment="center"
        android:textSize="20sp" />
</LinearLayout>